13241 mlxcx sending wrong length SET_FLOW_TABLE_ROOT on some parts